// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should render all the compoents 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-1wtktsk"
  >
    <div
      class="HvCard-semanticContainer css-emolmc"
    >
      <div
        class="HvCard-semanticBar css-12y48s9"
      />
      <div
        class="HvCard-icon css-pzj2c4"
      />
    </div>
    <div
      class="MuiCardHeader-root HvCard-Header-root css-pqwkee css-185gdzj-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content HvCard-Header-content css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title HvCard-Header-title css-yragcd css-1qvr50w-MuiTypography-root"
        >
          mockTitle
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader HvCard-Header-subheader css-yragcd css-nrdprl-MuiTypography-root"
        >
          mockSubtitle
        </span>
      </div>
    </div>
    <img
      alt="mockImg"
      class="MuiCardMedia-root HvCard-Media-root css-8atqhb MuiCardMedia-media HvCard-Media-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
      role="img"
    />
    <div
      class="MuiCardContent-root HvCard-Content-content css-1ly90im css-46bh2p-MuiCardContent-root"
    >
      <label
        class="HvTypography-root HvTypography-label css-9vbp9s-getStyledComponent e1tnpalo0"
      >
        mockCardContent
      </label>
    </div>
  </div>
</div>
`;

exports[`Card > should render content 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-1wtktsk"
  >
    <div
      class="HvCard-semanticContainer css-emolmc"
    >
      <div
        class="HvCard-semanticBar css-12y48s9"
      />
      <div
        class="HvCard-icon css-pzj2c4"
      />
    </div>
    <div
      class="MuiCardContent-root HvCard-Content-content css-1ly90im css-46bh2p-MuiCardContent-root"
    >
      <label
        class="HvTypography-root HvTypography-label css-9vbp9s-getStyledComponent e1tnpalo0"
      >
        mockCardContent
      </label>
    </div>
  </div>
</div>
`;

exports[`Card > should render correctly 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-1wtktsk"
  >
    <div
      class="HvCard-semanticContainer css-emolmc"
    >
      <div
        class="HvCard-semanticBar css-12y48s9"
      />
      <div
        class="HvCard-icon css-pzj2c4"
      />
    </div>
  </div>
</div>
`;

exports[`Card > should render header 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-1wtktsk"
  >
    <div
      class="HvCard-semanticContainer css-emolmc"
    >
      <div
        class="HvCard-semanticBar css-12y48s9"
      />
      <div
        class="HvCard-icon css-pzj2c4"
      />
    </div>
    <div
      class="MuiCardHeader-root HvCard-Header-root css-pqwkee css-185gdzj-MuiCardHeader-root"
    >
      <div
        class="MuiCardHeader-content HvCard-Header-content css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title HvCard-Header-title css-yragcd css-1qvr50w-MuiTypography-root"
        >
          mockTitle
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader HvCard-Header-subheader css-yragcd css-nrdprl-MuiTypography-root"
        >
          mockSubtitle
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should render image 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-1wtktsk"
  >
    <div
      class="HvCard-semanticContainer css-emolmc"
    >
      <div
        class="HvCard-semanticBar css-12y48s9"
      />
      <div
        class="HvCard-icon css-pzj2c4"
      />
    </div>
    <img
      alt="mockImg"
      class="MuiCardMedia-root HvCard-Media-root css-8atqhb MuiCardMedia-media HvCard-Media-media MuiCardMedia-img css-o69gx8-MuiCardMedia-root"
      role="img"
    />
  </div>
</div>
`;
